# kuiperbook

./: .gitmodules  CMakeLists.txt  README.md
course0_prepare/test/: test.cpp
course1_prepare/: CMakeLists.txt
course1_tensor/: CMakeLists.txt
course2_graph/: CMakeLists.txt
course2_graph/test/: test_ir.cpp
course2_tensor/test/: test_create_tensor.cpp  test_get_values.cpp
course3_buildgraph/source/: runtime_op.cpp
course3_buildgraph/test/: test_topo.cpp
course3_graph/model_file/: test_linear.pnnx.param
course3_graph/source/: ir.cpp  runtime_ir.cpp
course3_graph/test/: test_ir.cpp
course4_buildgraph/: CMakeLists.txt
course4_buildgraph/test/: test_topo.cpp
course4_layerfac/: CMakeLists.txt
course5_maxconv/: CMakeLists.txt
course6_expression/: CMakeLists.txt
course7_resnetyolov5/: CMakeLists.txt
course7_resnetyolov5/include/runtime/: runtime_ir.hpp
course7_resnetyolov5/test/: test_resnet.cpp  test_yolov5.cpp
course8_llama2/: llama_chat.cpp  main.cpp
course8_llama2/include/layer/abstract/: param_layer.hpp
course8_llama2/model_file/: llama模型地址
course8_llama2/source/: tensor.cpp
course8_llama2/source/layer/abstract/: param_layer.cpp
course8_llama2/source/layer/details/: matmul.hpp  softmax.hpp
course8_resnetyolov5/test/: test_resnet.cpp  test_yolov5.cpp
course9_llama2/include/data/: tensor.hpp
course9_llama2/source/layer/details/: softmax.cpp
course9_llama2_old/: CMakeLists.txt
course9_llama2_old/include/layer/abstract/: layer.hpp
course9_llama2_old/source/layer/abstract/: layer.cpp
course9_llama2_old/source/layer/details/: matmul.cpp  rms_norm.hpp
