cmake_minimum_required(VERSION 3.16)
project(kuiper_book)
add_subdirectory(course1_prepare)
add_subdirectory(course2_tensor)
add_subdirectory(course3_graph)
add_subdirectory(course8_resnetyolov5)
add_subdirectory(course9_llama2)
add_subdirectory(course4_buildgraph)
add_subdirectory(course5_layerfac)
add_subdirectory(course6_maxconv)
add_subdirectory(course7_expression)

